; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_spa_misc.c_spa_deadman.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_spa_misc.c_spa_deadman.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [52 x i8] c"slow spa_sync: started %llu seconds ago, calls %llu\00", align 1
@NANOSEC = common dso_local global i32 0, align 4
@zfs_deadman_enabled = common dso_local global i64 0, align 8
@FTAG = common dso_local global i32 0, align 4
@system_delay_taskq = common dso_local global i32 0, align 4
@TQ_SLEEP = common dso_local global i32 0, align 4
@zfs_deadman_checktime_ms = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @spa_deadman(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %5, %struct.TYPE_4__** %3, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = call i64 @spa_suspended(%struct.TYPE_4__* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  br label %42

10:                                               ; preds = %1
  %11 = call i32 (...) @gethrtime()
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = sub nsw i32 %11, %14
  %16 = load i32, i32* @NANOSEC, align 4
  %17 = sdiv i32 %15, %16
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 3
  %20 = load i32, i32* %19, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %19, align 4
  %22 = call i32 @zfs_dbgmsg(i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str, i64 0, i64 0), i32 %17, i32 %21)
  %23 = load i64, i64* @zfs_deadman_enabled, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %31

25:                                               ; preds = %10
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 2
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @FTAG, align 4
  %30 = call i32 @vdev_deadman(i32 %28, i32 %29)
  br label %31

31:                                               ; preds = %25, %10
  %32 = load i32, i32* @system_delay_taskq, align 4
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %34 = load i32, i32* @TQ_SLEEP, align 4
  %35 = call i64 (...) @ddi_get_lbolt()
  %36 = load i32, i32* @zfs_deadman_checktime_ms, align 4
  %37 = call i64 @MSEC_TO_TICK(i32 %36)
  %38 = add nsw i64 %35, %37
  %39 = call i32 @taskq_dispatch_delay(i32 %32, void (i8*)* @spa_deadman, %struct.TYPE_4__* %33, i32 %34, i64 %38)
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %41 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i32 0, i32 1
  store i32 %39, i32* %41, align 4
  br label %42

42:                                               ; preds = %31, %9
  ret void
}

declare dso_local i64 @spa_suspended(%struct.TYPE_4__*) #1

declare dso_local i32 @zfs_dbgmsg(i8*, i32, i32) #1

declare dso_local i32 @gethrtime(...) #1

declare dso_local i32 @vdev_deadman(i32, i32) #1

declare dso_local i32 @taskq_dispatch_delay(i32, void (i8*)*, %struct.TYPE_4__*, i32, i64) #1

declare dso_local i64 @ddi_get_lbolt(...) #1

declare dso_local i64 @MSEC_TO_TICK(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
